<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Food Finder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="to">To</string>
    <string name="find">Find</string>
    <string name="your_favorite">your favorite</string>
    <string name="food">Food</string>
    <string name="type_here">Type or Speak here</string>
    <string name="type_here_to_filter">Type here to filter</string>
    <string name="speak">Speak</string>
    <string name="hold_a_item_to_save_it">Press and hold a item to save it locally.</string>
    
    <string name="example_type_food_hint">Ex: Strawberry</string>
    <string name="do_you_want_to_save_search_result">Do you want save these food on your device?</string>
    <string name="do_you_want_to_save_this_food">Do you want save this food on your device?</string>
    
    <string name="favorite_foods">Your favorite food - Locally saved</string>
    <string name="click_to_speak">Click on the Button below to Speak</string>
    <string name="connection_fail_message">Sorry! Our connection failed. Please verify your internet connection and try again.</string>
    <string name="device_not_support_speech_to_text">Opps! Your device does not support Speech to Text</string>
    <string name="food_save_fail">Opps! A problem occurred to save food locally.</string>
    <string name="food_save_success">The food was saved sucessfully!</string>
    <string name="there_is_no_food_save_locally">We will show here all your favorite food. Now there is no food save locally.</string>
    
    
    <string name="fiber">Fiber</string>
    <string name="brand">Brand</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="sodium">Soidum</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="calories">Calories</string>
    <string name="sugar">Sugar</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="potassium">Potassium</string>
    
    

</resources>
